// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Button - test Button Primary - snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#18bd18",
      "borderRadius": 25,
      "borderWidth": 1,
      "justifyContent": "center",
      "maxWidth": "90%",
      "minHeight": 48,
      "minWidth": "30%",
      "opacity": 1,
      "padding": 0,
      "paddingLeft": 20,
      "paddingRight": 20,
      "width": "80%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "minHeight": 48,
        "minWidth": 48,
        "padding": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 18,
          "fontWeight": "normal",
          "textAlign": "center",
        }
      }
    >
      Primary button
    </Text>
  </View>
</View>
`;

exports[`Component Button - test Button Secondary - snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": undefined,
      "borderColor": "#ffffff",
      "borderRadius": 25,
      "borderWidth": 1,
      "justifyContent": "center",
      "maxWidth": "90%",
      "minHeight": 48,
      "minWidth": "30%",
      "opacity": 1,
      "padding": 0,
      "paddingLeft": 20,
      "paddingRight": 20,
      "width": "80%",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "margin": 0,
        "minHeight": 48,
        "minWidth": 48,
        "padding": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 18,
          "fontWeight": "normal",
          "textAlign": "center",
        }
      }
    >
      Secondary button
    </Text>
  </View>
</View>
`;
